Source/WebCore/platform/graphics/gpu/mac/DrawingBufferMac.mm
@@ -46,6 +46,7 @@ DrawingBuffer::DrawingBuffer(GraphicsContext3D* context,
     , m_alpha(alpha)
     , m_scissorEnabled(false)
     , m_texture2DBinding(0)
+    , m_framebufferBinding(0)
     , m_activeTextureUnit(GraphicsContext3D::TEXTURE0)
     , m_context(context)
     , m_size(-1, -1)
